--- a/source/stylesheets/style.css
+++ b/source/stylesheets/style.css
@@ -22,9 +22,9 @@ div#main { min-height: 100%; }
       section { overflow:auto; padding-bottom: 3em; clear: both; }
          section ul { list-style: none; margin-top: 2.2em; width: 80%; }
             section ul li { clear: both; display: block; margin-top: 1.9em; padding: 0.3em; line-height: 1.5em; border-top: 1px solid #efefef; }
-            section ul li a { float: left; display: block; margin: 0.3em 0.5em; color: #999; }
+            section ul li a { float: left; display: block; margin: 0.3em 0.5em; color: #999; font-size: 1.1em; }
             section ul li a:hover { color: #3a6579; }
-            section ul li p { text-align: right; font-size: 1em; font-style: oblique; color: #999; }
+            section ul li p { text-align: right; font-size: 1.1em; font-style: oblique; color: #999; }
             section ul li p a { float:none; display: inline; margin: 0; color: #a92c32; }
             section ul li p a:hover { color: #692b00; }
             section ul li span.circle { float:left; display: block; width: 1.1em; height: 1.3em; background: #333; border-radius: 1.5em; -moz-border-radius: 1.5em; -webkit-border-radius: 1.5em; font-family: calluna-1,calluna-2,sans-serif; font-size: 1.2em; color: #fff; padding: 0.25em 0.25em 0.15em 0.3em; }
