--- a/source/2009/development/java/single-dynamic-multiple-and-double-dispatching.html.slim
+++ b/source/2009/development/java/single-dynamic-multiple-and-double-dispatching.html.slim
@@ -53,7 +53,7 @@ article#detail
       '  functions under different types (classes). Compiler binds them to the correct ones in the compile time:
 
    pre
-      | ::java::
+      ' ::java::
         class Messenger {
            public void send(String message) { }
         }
