--- a/source/_head.slim
+++ b/source/_head.slim
@@ -15,6 +15,7 @@ head
    == stylesheet_link_tag "firefox.css", :media => "all"
    == stylesheet_link_tag "opera.css", :media => "all"
    == stylesheet_link_tag "idle.css", :media => "all"
+   == stylesheet_link_tag "disqus.css", :media => "all"
 
    script type="text/javascript" src="http://use.typekit.com/vew8tjo.js"
    javascript:
