--- a/source/layout_entry.slim
+++ b/source/layout_entry.slim
@@ -9,9 +9,12 @@ html
             == partial "menu"
             section(id="articles")
                == yield
+
+            div#disqus_thread
             javascript:
                var disqus_developer = 1;
                var disqus_shortname = 'localblog';
+               var host = 'localhost:4567';
                (function() {
                   var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
                   dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
