Added some htaccess rules copied from HTML5BP

--- a/source/layout_entry.slim
+++ b/source/layout_entry.slim
@@ -11,7 +11,21 @@ html
                == yield
 
             div#disqus_thread
+            script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.3/jquery.min.js"
             javascript:
+               !window.jQuery && document.write('<script src="/javascripts/jquery.min.js"><\/script>')
+               $(document).ready(function() {
+                  $(function(){
+                     $("pre").hover(function() {
+                        var codeInnerWidth = $("code", this).width() + 10;
+                        if (codeInnerWidth > 640) {
+                           $(this).stop(true, false).css({zIndex:"99",position:"relative",overflow:"hidden"}).animate({width:codeInnerWidth+"px"});
+                        }
+                     }, function() {
+                        $(this).stop(true, false).animate({width:640});
+                     });
+                  });
+               });
                var disqus_developer = 1;
                var disqus_shortname = 'localblog';
                var host = 'localhost:4567';
