--- a/source/_head.slim
+++ b/source/_head.slim
@@ -1,16 +1,18 @@
 head
    meta charset="utf-8"
+   meta content="IE=edge;chrome=1;FF=3;OtherUA=4" http-equiv="X-UA-Compatible"
    meta name="description" content="Isa Goksu's Blog"
    meta name="author" content="Isa Goksu"
+
 
    / Le HTML5 shim, for IE6-8 support of HTML elements
    /[ if lt IE 9 ]
      script src='http://html5shim.googlecode.com/svn/trunk/html5.js'
 
-   / Always force latest IE rendering engine (even in intranet) & Chrome Frame
-   meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"
-
    link rel="icon" type="image/png" href="/images/favicon.png"
+   link rel="shortcut icon" type="image/png" href="/images/favicon.png"
+   link rel="apple-touch-icon" type="image/png" href="/images/favicon.png"
+
    == stylesheet_link_tag "style.css", :media => "all"
    == stylesheet_link_tag "firefox.css", :media => "all"
    == stylesheet_link_tag "opera.css", :media => "all"
@@ -20,20 +22,6 @@ head
    script type="text/javascript" src="http://use.typekit.com/vew8tjo.js"
    javascript:
       try{Typekit.load();}catch(e){}
-   script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.3/jquery.min.js"
-   javascript:
-      $(document).ready(function() {
-         $(function(){
-            $("pre").hover(function() {
-               var codeInnerWidth = $("code", this).width() + 10;
-               if (codeInnerWidth > 640) {
-                  $(this).stop(true, false).css({zIndex:"99",position:"relative",overflow:"hidden"}).animate({width:codeInnerWidth+"px"});
-               }
-            }, function() {
-               $(this).stop(true, false).animate({width:640});
-            });
-         });
-      });
 
    title Simple and Pragmatic Thoughts by Isa Goksu
 
