--- a/source/stylesheets/style.css
+++ b/source/stylesheets/style.css
@@ -1,5 +1,6 @@
 * { margin: 0; padding: 0; border: 0; }
-html, body { height: 100%; font-family: minion-pro-1, minion-pro-2, serif; font-size: 100%; }
+html { height: 100%; -webkit-font-smoothing: antialiased; }
+body { height: 100%; font-family: minion-pro-1, minion-pro-2, serif; font-size: 100%; }
 ::selection { color:#fff; background-color: #e95155; }
 
 header, footer, article { display:block; }
@@ -25,7 +26,7 @@ div#main { min-height: 100%; }
             section ul li a { float: left; display: block; margin: 0.2em 0.5em; color: #999; font-size: 1.1em; }
             section ul li a:hover { color: #3a6579; }
             section ul li p { text-align: right; font-size: 1.1em; font-style: oblique; color: #999; }
-            section ul li p a { float:none; display: inline; margin: 0; color: #a92c32; }
+            section ul li p a { float:none; display: inline; font-size: 1.0em; margin: 0; color: #a92c32; }
             section ul li p a:hover { color: #692b00; }
             section ul li span.circle { float:left; display: block; width: 1.2em; height: 1.4em; background: #333; border-radius: 1.5em; -moz-border-radius: 1.5em; -webkit-border-radius: 1.5em; font-family: Georgia, serif; font-size: 1.2em; color: #fff; padding: 0.15em 0.25em; }
             section ul li:hover span.circle { background-color: #d45227; }
