Added .htaccess logic to combine stylesheets to one file on demand

--- a/source/_head.slim
+++ b/source/_head.slim
@@ -13,11 +13,7 @@ head
    link rel="shortcut icon" type="image/png" href="/images/favicon.png"
    link rel="apple-touch-icon" type="image/png" href="/images/favicon.png"
 
-   == stylesheet_link_tag "style.css", :media => "all"
-   == stylesheet_link_tag "firefox.css", :media => "all"
-   == stylesheet_link_tag "opera.css", :media => "all"
-   == stylesheet_link_tag "idle.css", :media => "all"
-   == stylesheet_link_tag "disqus.css", :media => "all"
+   == stylesheet_link_tag "styles.combined.css", :media => "all"
 
    script type="text/javascript" src="http://use.typekit.com/vew8tjo.js"
    javascript:
