Added HTML5 player

--- a/source/2009/development/ios/fancy-uitabbar-like-tweetie.html.slim
+++ b/source/2009/development/ios/fancy-uitabbar-like-tweetie.html.slim
@@ -115,9 +115,7 @@ article#detail
       ' This is basically it. So I did some animation too, here is the result:
 
    p.video
-      video src="" controls="controls"
-         source src="http://isagoksu.com/wp-content/uploads/screencasts/iphone/FancyTabbar.m4v" type="video/mp4" />
-         em Your browser does not support the HTML5 videos.
+      == video_to "http://isagoksu.com/wp-content/uploads/screencasts/iphone/FancyTabbar.m4v"
 
    p
       ' If you guys need, I can upload the working source code to somewhere.. Hope this guides a bit.
