--- a/source/stylesheets/style.css
+++ b/source/stylesheets/style.css
@@ -17,81 +17,12 @@ img,
 object,
 embed {max-width: 100%;}
 
-/* force a vertical scrollbar to prevent a jumpy page */
-html {overflow-y: scroll;}
-
-/* we use a lot of ULs that aren't bulleted.
-   don't forget to restore the bullets within content. */
-ul {list-style: none;}
-
-blockquote, q {quotes: none;}
-
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {content: ''; content: none;}
-
-a {margin: 0; padding: 0; font-size: 100%; vertical-align: baseline; background: transparent;}
-
-del {text-decoration: line-through;}
-
-abbr[title], dfn[title] {border-bottom: 1px dotted #000; cursor: help;}
-
-/* tables still need cellspacing="0" in the markup */
-table {border-collapse: collapse; border-spacing: 0;}
-th {font-weight: bold; vertical-align: bottom;}
-td {font-weight: normal; vertical-align: top;}
-
-hr {display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin: 1em 0; padding: 0;}
-
-input, select {vertical-align: middle;}
-
-pre {
-   white-space: pre; /* CSS2 */
-   white-space: pre-wrap; /* CSS 2.1 */
-   white-space: pre-line; /* CSS 3 (and 2.1 as well, actually) */
-   word-wrap: break-word; /* IE */
-}
-
-input[type="radio"] {vertical-align: text-bottom;}
-input[type="checkbox"] {vertical-align: bottom; *vertical-align: baseline;}
-.ie6 input {vertical-align: text-bottom;}
-
-select, input, textarea {font: 99% sans-serif;}
-
 table {font-size: inherit; font: 100%;}
+td, td img {vertical-align: top;}
 
 /* Accessible focus treatment
    people.opera.com/patrickl/experiments/keyboard/test */
 a:hover, a:active {outline: none;}
-
-small {font-size: 85%;}
-
-strong, th {font-weight: bold;}
-
-td, td img {vertical-align: top;}
-
-/* Make sure sup and sub don't screw with your line-heights
-   gist.github.com/413930 */
-sub, sup {font-size: 75%; line-height: 0; position: relative;}
-sup {top: -0.5em;}
-sub {bottom: -0.25em;}
-
-/* standardize any monospaced elements */
-pre, code, kbd, samp {font-family: monospace, sans-serif;}
-
-/* hand cursor on clickable elements */
-.clickable,
-label,
-input[type=button],
-input[type=submit],
-button {cursor: pointer;}
-
-/* Webkit browsers add a 2px margin outside the chrome of form elements */
-button, input, select, textarea {margin: 0;}
-
-/* make buttons play nice in IE */
-button {width: auto; overflow: visible;}
 
 /* scale images in IE7 more attractively */
 .ie7 img {-ms-interpolation-mode: bicubic;}
@@ -99,61 +30,12 @@ button {width: auto; overflow: visible;}
 /* prevent BG image flicker upon hover */
 .ie6 html {filter: expression(document.execCommand("BackgroundImageCache", false, true));}
 
-/* let's clear some floats */
-.clearfix:before, .clearfix:after { content: "\0020"; display: block; height: 0; overflow: hidden; }
-.clearfix:after { clear: both; }
-.clearfix { zoom: 1; }
-
-/* Ok, this is where the fun starts.
--------------------------------------------------------------------------------*/
-
-/* new Linux- and Windows-friendly sans-serif font stack: http://mky.be/fontstack */
-body {font: 13px Helmet, Freesans, sans-serif;}
-
-/* using local fonts? make sure to read up on Paul Irish's
-   Bulletproof @font-face syntax: http://mky.be/font-face/bulletproof/ */
-
-/* we like off-black for text */
-body, select, input, textarea {color: #333;}
-
-a {color: #03f;}
-a:hover {color: #69f;}
-
 /* Custom text-selection colors (remove any text shadows: twitter.com/miketaylr/status/12228805301) */
 ::-moz-selection { background: #e95155; color: #fff; text-shadow: none; }
 ::selection { background: #e95155; color: #fff; text-shadow: none; }
 
 /* j.mp/webkit-tap-highlight-color */
 a:link {-webkit-tap-highlight-color: #fcd700;}
-
-ins {background-color: #fcd700; color: #000; text-decoration: none;}
-mark {background-color: #fcd700; color: #000; font-style: italic; font-weight: bold;}
-
-
-
-
-
-/* Print styles!
--------------------------------------------------------------------------------*/
-@media print { }
-
-
-/* Media queries!
--------------------------------------------------------------------------------*/
-
-/* Consider this: www.cloudfour.com/css-media-query-for-mobile-is-fools-gold/ */
-@media screen and (max-device-width: 480px) {
-
-
-}
-
-@media all and (orientation: portrait) {
-
-}
-
-@media all and (orientation: landscape) {
-
-}
 
 html { height: 100%; -webkit-font-smoothing: antialiased; }
 body { height: 100%; font-family: minion-pro-1, minion-pro-2, serif; font-size: 100%; }
@@ -175,7 +57,7 @@ div#main { min-height: 100%; }
          nav ul li:first-child { padding:0; padding-left: 0.18em; padding-right: 0.3em; }
       div#page-header { float:right; width: 66%; margin-top: -1.6em; }
          div#page-header hr { width: 480px; height: 1px; border: 0; color: #e3e3e3; background-color: #e3e3e3; }
-         div#page-header p.signature { float: right; color: #a92c32; font-family: lourdes-1,lourdes-2; font-size: 1.2em; font-style: oblique; margin-top: 0.0em; margin-right: 2.5em; background-color: white; padding: 0 0.5em; }
+         div#page-header p.signature { float: right; position: relative; top: 0.7em; color: #a92c32; font-family: lourdes-1,lourdes-2; font-size: 1.2em; font-style: oblique; line-height: 1.2em; margin-right: 2.5em; background-color: white; padding: 0 0.5em; }
       section { overflow:auto; clear: both; }
          section ul { list-style: none; margin-top: 2.2em; width: 80%; }
             section ul li { clear: both; display: block; margin-top: 1.9em; padding: 0.3em; line-height: 1.5em; border-top: 1px solid #efefef; }
@@ -215,7 +97,7 @@ div#main { min-height: 100%; }
                section article#detail p span.highlight { background-color: #ebeaff; padding: 0.2em 0.3em 0.08em; border-radius: 0.5em; -moz-border-radius: 0.5em; -webkit-border-radius: 0.5em; }
                section article#detail p span.underline { text-decoration: underline; }
                section article#detail p abbr { background-color: #ebeaff; padding: 0.2em 0.3em 0.08em; border-radius: 0.5em; -moz-border-radius: 0.5em; -webkit-border-radius: 0.5em; }
-            section article#detail pre { position: relative; margin: 1.6em 0 0 0.4em; padding: 0.7em; font-family: Monaco, Consolas, monospace; font-size: 0.8em; line-height: 1.6em; background: url('/images/pre-bg.png') repeat 0 1px; border:0; border-top: 1px solid #eee; border-bottom: 1px solid #eee; width: 95%; overflow: auto; white-space: pre-wrap; white-space: -moz-pre-wrap !important; white-space: -pre-wrap; white-space: -o-pre-wrap; word-wrap: break-word; }
+            section article#detail pre { position: relative; margin: 1.6em 0 0 0.4em; padding: 0.7em; font-family: Monaco, Courier New, monospace; font-size: 0.8em; line-height: 1.6em; background: url('/images/pre-bg.png') repeat 0 1px; border:0; border-top: 1px solid #eee; border-bottom: 1px solid #eee; width: 95%; overflow: auto; white-space: pre-wrap; white-space: -moz-pre-wrap !important; white-space: -pre-wrap; white-space: -o-pre-wrap; word-wrap: break-word; }
             section article#detail blockquote { font-size: 1.1em; font-style: oblique; line-height: 1.6em; color: #999; padding: 1.2em; margin: 1.6em auto 0 auto; width: 80%; border-top: 1px solid #ddd; border-bottom: 1px solid #ddd; }
                section article#detail blockquote p.author { text-align: right; font-size: 1.0em; font-style: normal; color: #474747; padding-top: 1.6em; }
             section article#detail ul { list-style: none; margin: 1.6em 0 0 1.6em; border-bottom: 1px solid #eee; width: 90%; }
