--- a/source/_head.slim
+++ b/source/_head.slim
@@ -8,6 +8,10 @@ head
    link rel="shortcut icon" type="image/png" href="/images/favicon.png"
    link rel="apple-touch-icon" type="image/png" href="/images/favicon.png"
 
+   == stylesheet_link_tag "style.css", :media => "all"
+   == stylesheet_link_tag "firefox.css", :media => "all"
+   == stylesheet_link_tag "opera.css", :media => "all"
+   == stylesheet_link_tag "idle.css", :media => "all"
    == stylesheet_link_tag "styles.combined.css", :media => "all"
 
    / Le HTML5 shim, for IE6-8 support of HTML elements
